some little changes I made at school

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
                 caso di Locazione o Passaggio di Proprietà.
             </p>
         </div>
+
+        <div>
+            <h2>Chi Siamo</h2>
+            <p>
+                Studio di ingegneria specializzato nella redazione di Attestati di Prestazione
+                Energetica (APE) operante dal 2015 in Lombardia.
+            </p>
+        </div>
+        
     </div>
 
 
