prices still to finish, then gotta do navbar and footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
         <div id="info-ape">
             <h2>Informazioni Sull'APE</h2>
             <p>
-                L'APE descrive le caratteristiche energetiche di un
+                L'attestato viene redatto in
+                seguito a regolare sopralluogo (OBBLIGATORIO diffidare da chi sostiene il
+                contrario pena gravi sanzioni) e regolarmente registrato sul CEER (Catasto
+                Energetico Edifici Regionale) dopo regolare procedura CENED. L'attestato viene
+                consegnato entro una settimana dal SOPRALLUOGO (possibilità di averlo in tempi
+                ridotti con procedura urgente). L'APE descrive le caratteristiche energetiche di un
+                immobile secondo quanto indicato dalla normativa vigente ed è obbligatorio in
+                caso di Locazione o Passaggio di Proprietà.L'APE descrive le caratteristiche energetiche di un
                 immobile secondo quanto indicato dalla normativa vigente ed è obbligatorio in
                 caso di Locazione o Passaggio di Proprietà.
             </p>
@@ -36,7 +43,26 @@
                 Energetica (APE) operante dal 2015 in Lombardia.
             </p>
         </div>
-        
+
+        <div class="flex-container" id="prices">
+            <div class="price-wrapper">
+                <h3>Prezzo1</h3>
+                <p class="price-elem-property">Property1</p>
+                <hr>
+                <p class="price-elem-property">Property2</p>
+                <hr>
+                <p class="price-elem-property">Property3</p>
+                <button>Scegli</button>
+            </div>
+            <div class="price-wrapper">
+                <h3>Prezzo2</h3>
+                <p class="price-elem-property">Property1</p>
+                <p class="price-elem-property">Property2</p>
+                <p class="price-elem-property">Property3</p>
+                <button>Scegli</button>
+            </div>
+
+        </div>
     </div>
 
 
