don't know what to say

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link href="CSS/global.css" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar"></div>
+    <div class="navbar">
+        <h1>Navbar</h1>
+    </div>
 
     <div id="front-image-container">
+        <img id="front-image" src="images/ape-2015-attestato-prestazione-energetica.asp_Oit_128918-2053638897.webp">
         <h1>Studio APE</h1>
         <div class="typing-animation">
             <span class="text first-part">Siamo </span>
@@ -48,9 +51,7 @@
             <div class="price-wrapper">
                 <h3>Prezzo1</h3>
                 <p class="price-elem-property">Property1</p>
-                <hr>
                 <p class="price-elem-property">Property2</p>
-                <hr>
                 <p class="price-elem-property">Property3</p>
                 <button>Scegli</button>
             </div>
@@ -62,9 +63,24 @@
                 <button>Scegli</button>
             </div>
 
+
         </div>
     </div>
 
+    <footer class="flex-container">
+        <div class="footer-element">
+            <h3>Contattaci</h3>
+            <p>
+                Num. Cellulare:<br>
+                Email: 
+            </p>
+        </div>
+
+        <div class="footer-element">
+            <h3>Sede</h3>
+            <p>Da Inserire</p>
+        </div>
+    </footer>
 
     <script src="JS/frontPage.js"></script>
 </body>
